resolve merge error

--- a/Backend/templates/page_template.html
+++ b/Backend/templates/page_template.html
@@ -16,7 +16,7 @@
             var USERNAME = '{{ username }}';
         </script>
 
-        <title>{% block meta_page_title %}{% endblock meta_page_title %}Khan Academy</title>
+        <title>{% block meta_page_title %}{% endblock meta_page_title %}OpenDSA</title>
         {% if video -%}
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
         {%- endif %}
@@ -38,7 +38,7 @@
         {# Google+ -#}
         <meta itemprop="name" content="Khan Academy">
         <meta itemprop="description" content="Watch. Practice. Learn almost anything for free.">
-        <meta itemprop="image" content="http://www.khanacademy.org/images/khan-logo-vertical-transparent.png">
+        <meta itemprop="image" content="http://algoviz.org/sites/default/files/newsflash_logo.gif">
         {# End Google+ -#}
 
         <meta property="og:description"
