--- a/Frontend/templates/showfile/viewexercises.html
+++ b/Frontend/templates/showfile/viewexercises.html
@@ -61,7 +61,7 @@
 
 </script>
 {% endblock pagescript %}
-{% block pagetitle %}Exercise Dashboard{% endblock pagetitle %}
+{% block pagetitle %}OpenDSA Modules Knowledge Map{% endblock pagetitle %}
 {% block pagecontent %}
 <div id="background">
   <div id="container" class="dashboard{% if not logged_in %} unregistered{% endif %}">
