--- a/Frontend/templates/showfile/viewexercises.html
+++ b/Frontend/templates/showfile/viewexercises.html
@@ -5,8 +5,8 @@
 {% block meta_page_title %}Exercise Dashboard | {% endblock meta_page_title %}
 {% block pagescript %}
 
-<script src="http://127.0.0.1:8000/OpenDSA/static/all_js.js" type="text/javascript"></script>
-<link rel='stylesheet' type='text/css' href='http://127.0.0.1:8000/OpenDSA/static/khanacademy.css'/>
+<script src="http://algoviz-beta.cc.vt.edu/OpenDSA/OpenDSA/Frontend/static/all_js.js" type="text/javascript"></script>
+<link rel='stylesheet' type='text/css' href='http://algoviz-beta.cc.vt.edu/OpenDSA/OpenDSA/Frontend/static/khanacademy.css'/>
 <style>
     /* Temporary styles to fit new dashboard into old template, will be removed when new template is dropped in. */
     #page_sub_nav {display: none;}
