--- a/Frontend/templates/exercises.html
+++ b/Frontend/templates/exercises.html
@@ -16,13 +16,13 @@
         <div class="dashboard-nav">
             <span class="selected"><a href="#">Knowledge Map</a></span> 
         </div>
-        <div class="dashboard-title"><img src="http://127.0.0.1:8000/OpenDSA/static/images/dashboard-icon-active.png" class="dashboard-icon" width=22 height=22 /> Exercises <a href="#" class="collapse-drawer toggle-drawer"><img src="http://127.0.0.1:8000/OpenDSA/static/images/expand-left.png" width="25" height="25"/></a></div>
-            <a href="#" class="expand-drawer toggle-drawer"><img src="http://127.0.0.1:8000/OpenDSA/static/images/expand-right.png" width="25" height="25" /></a>
+        <div class="dashboard-title"><img src="http://algoviz-beta.cc.vt.edu/OpenDSA/OpenDSA/Frontend/static/images/dashboard-icon-active.png" class="dashboard-icon" width=22 height=22 /> Modules <a href="#" class="collapse-drawer toggle-drawer"><img src="http://algoviz-beta.cc.vt.edu/OpenDSA/OpenDSA/Frontend/static/images/expand-left.png" width="25" height="25"/></a></div>
+            <a href="#" class="expand-drawer toggle-drawer"><img src="http://algoviz-beta.cc.vt.edu/OpenDSA/OpenDSA/Frontend/static/images/expand-right.png" width="25" height="25" /></a>
         </div>
     <div class="dashboard-drawer drawer-hoverable">
     {%- if review_drawer -%}
     <a href="/review" id="dashboard-review-exercises" class="hide-on-dashboard-filter exercise-color review light">
-        <img src="http://127.0.0.1:8000/OpenDSA/static/images/node-review.png" height="40" width="38">
+        <img src="http://algoviz-beta.cc.vt.edu/OpenDSA/OpenDSA/Frontend/static/images/node-review.png" height="40" width="38">
         <span class="gradient-overlay"></span>
         <span id="dashboard-review-title" href="/review">{{ review_statement }}</span>
         <!-- TODO(david): This is placeholder. Need points info. -->
@@ -58,8 +58,8 @@
   {#- if import_maps_package -#}
     <script src="http://maps.google.com/maps/api/js?v=3.3&sensor=false" type="text/javascript"></script>
     {# js_css_packages.js_package("maps") #}
-    <script src="http://127.0.0.1:8000/OpenDSA/static/map/knowledgemap.js" type="text/javascript"></script>
-    <script src="http://127.0.0.1:8000/OpenDSA/static/map/fastmarkeroverlay.js" type="text/javascript"></script>
+    <script src="http://algoviz-beta.cc.vt.edu/OpenDSA/OpenDSA/Frontend/static/map/knowledgemap.js" type="text/javascript"></script>
+    <script src="http://algoviz-beta.cc.vt.edu/OpenDSA/OpenDSA/Frontend/static/map/fastmarkeroverlay.js" type="text/javascript"></script>
   {#- endif -#}
     <div class="map-canvas"></div>
 {%- endmacro %}
