--- a/AV/opendsaAV.css
+++ b/AV/opendsaAV.css
@@ -10,14 +10,14 @@ input {font-size: 0.7em; }
 html, body {
   background-color: #eed;
   color: #000000;
-  margin: 0px;
+  margin: 0;
 }
 
 div h1 {
   text-align: center;
   border-bottom: 1px solid black;
   background-color: #eed;
-  margin: -8px -8px 0px -8px;
+  margin: -8px -8px 0 -8px;
   padding: 8px 8px 2px 8px;
 }
 
