Broke the css and JavaScript code out of RST/source/Shellsort.rst. Also did some playing around with jshint and cleaning stuff. Removes RST/source/Huffman.rst for now.

--- a/AV/radix.css
+++ b/AV/radix.css
@@ -22,14 +22,14 @@ div h1 {
 .jsavarray {
   padding-left:0;
 }
-p.jsavoutput.jsavline {
+.jsavline {
   height: 30px;
   margin: 0;
 }
 #about {
   float: right;
 }
-a.jsavsettings {
+.jsavsettings {
   display: block;
   margin-top: -1px;
   margin-left: 10px;
