--- a/RST/source/_static/opendsaMOD.css
+++ b/RST/source/_static/opendsaMOD.css
@@ -4,3 +4,37 @@
 .admonition-todo {
   background-color:#FFC0CB;
 }
+.slide-out-div {
+    padding: 10px;
+    width: 275px;
+    background: #FAFAFA;
+    opacity:0.8; 
+    border: 1px solid #29216d;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
