Added flush_stored_data(), added code to dynamically attach loggers to all links and buttons, works for links, doesn't work for buttons, added check marks to show proficiency for inline AVs, changed send_av_scores to send av_scores individually because Django couldn't interpret the batch format

--- a/AV/Development/shellsortCON.css
+++ b/AV/Development/shellsortCON.css
@@ -6,6 +6,7 @@
   background-color: #eed;
   margin: 0 auto;
   border: 0;
+  position: relative;
 }
 .jsavcounter {
   float: left;
@@ -25,4 +26,10 @@
 }
 .jsavcontrols a {
   margin: 0 40px;
+}
+.prof_check_mark {
+  position: absolute;
+  top: 65px;
+  right: 10px;
+  display: none;
 }
