Validate ShellsortProficiency code

--- a/AV/Sorting/ShellsortProficiency.css
+++ b/AV/Sorting/ShellsortProficiency.css
@@ -24,7 +24,7 @@ p.jsavoutput.jsavline {
   height: 40px;
 }
 
-a.jsavsettings {
+.jsavsettings {
   display: block;
   margin-top: 10px;
   margin-left: 10px;
