Added inlineav directive to sphinx, made appropriate changes to cmake.py and RST files

--- a/RST/source/_static/opendsaMOD.css
+++ b/RST/source/_static/opendsaMOD.css
@@ -7,6 +7,15 @@
 .showHideLink {
   background-color: #FF0000;
 }
+.jsavcontainer {
+  position: relative;
+}
+.prof_check_mark {
+  position: absolute;
+  bottom: 45px; /* top: 65px; */
+  right: 10px;
+  display: none;
+}
 label {  
   display: block;  
 }
