--- a/AV/Sorting/mergesortAV.css
+++ b/AV/Sorting/mergesortAV.css
@@ -1,53 +1,16 @@
-#mergesortAV_container {
+#container {
   width: 800px;
   height: 650px;
-  border: 1px solid black;
-  background-color: #efe;
-  padding: 10px;
   overflow-y: visible;
   overflow-x: hidden;
 }
 
-#avcontainer{
+.avcontainer{
   overflow: visible;
 }
-
-div h1 {
-  background-color: #efe;
-  margin: 5px;
-}
-  
-.jsavcontainer {
-  background-color: #efe;
-  border: none;
-  padding: 0;
-}
-  
-.jsavcounter {
-  position: absolute;
-  width: 100px;
-}
-  
 .jsavarray {
-  padding-left:0;
   position: absolute;
 }
-  
 .jsavline {
   height: 30px;
-  margin: 0;
-}
-  
-#about {
-  float: right;
-}
-  
-.jsavsettings {
-  display: block;
-  margin-top: 10px;
-  margin-left: 10px;
-}
-  
-form {
-  clear: both;
 }
