--- a/AV/Sorting/quadraticsortAV.css
+++ b/AV/Sorting/quadraticsortAV.css
@@ -1,15 +1,15 @@
-#container {
-  width: 765px;
-  height: 550px;
-  border: 1px solid black;
-  background-color: #efe;
-  padding: 10px;
-  overflow: hidden;
-}
-
 div h1 {
   background-color: #efe;
   margin: 5px;
+  margin-top: -10px;
+}
+
+form {
+  clear: both;
+}
+
+.avcontainer {
+  margin-top: -20px;
 }
 .jsavcontainer {
   background-color: #efe;
@@ -20,20 +20,17 @@ div h1 {
   width: 100px;
 }
 .jsavarray {
-  margin: 0;
+  margin: 0px;
   margin-left: -10px;
   margin-top: 10px;
 }
 .jsavline {
   width: 750px;
-  margin: 0;
+  margin: 0px;
   margin-top: -5px;
 }
 .jsavcode {
   margin-top: -15px;
-}
-#about {
-  float: right;
 }
 .jsavbararray .jsavindex {
   background-color: #eee;
@@ -43,6 +40,25 @@ div h1 {
   margin-top: 10px;
   margin-left: 10px;
 }
-form {
-  clear: both;
+
+#container {
+  width: 765px;
+  height: 550px;
+  border: 1px solid black;
+  background-color: #efe;
+  padding: 10px;
+  overflow: hidden;
+}
+
+#ssperform {
+  margin-top: -5px;
+}
+
+input#run {
+  margin-bottom: 5px;
+}
+
+input#about {
+  margin-top: 10px;
+  float: right;
 }
