--- a/AV/Sorting/quicksortProficiency.css
+++ b/AV/Sorting/quicksortProficiency.css
@@ -1,7 +1,22 @@
 .container {
-  height: 420px;
+  height: 480px;
 }
 
 .jsavmodelanswer {
   height: 200px;
+}
+
+.jsavindex.jsavarrow.leftarrow::before {
+  left: 7px;
+  border-color: blue transparent transparent;
+}
+
+.jsavindex.jsavarrow.rightarrow::before {
+  left: 27px;
+  border-color: red transparent transparent;
+}
+
+.jsavindex.jsavarrow::before {
+  left: 17px;
+  border-color: #CC00FF transparent transparent;
 }
