--- a/AV/Sorting/quicksortAV.css
+++ b/AV/Sorting/quicksortAV.css
@@ -15,6 +15,16 @@
 }
 
 .jsavline {
-  height: 30px;
+  height: 50px;
   margin: 0;
+}
+
+.jsavindex.jsavarrow.leftarrow::before {
+  left: 7px;
+  border-color: blue transparent transparent;
+}
+
+.jsavindex.jsavarrow.rightarrow::before {
+  left: 27px;
+  border-color: red transparent transparent;
 }
