Fixed a bug with quicksort arrow methods, refactored JSAV extension methods into avUtils.js

--- a/AV/Sorting/sortingAV.css
+++ b/AV/Sorting/sortingAV.css
@@ -41,6 +41,20 @@ form {
   margin-left: 10px;
 }
 
+.jsavindex.jsavarrow.leftarrow::before {
+  left: 7px;
+  border-color: blue transparent transparent;
+}
+
+.jsavindex.jsavarrow.rightarrow::before {
+  left: 27px;
+  border-color: red transparent transparent;
+}
+
+.jsavindex.jsavarrow.leftrightarrow::before {
+  border-color: #CC00FF transparent transparent;
+}
+
 #container {
   width: 765px;
   height: 550px;
