--- a/AV/opendsaPRO.css
+++ b/AV/opendsaPRO.css
@@ -40,6 +40,20 @@
   margin-left: 10px;
 }
 
+.jsavindex.jsavarrow.leftarrow::before {
+  left: 7px;
+  border-color: blue transparent transparent;
+}
+
+.jsavindex.jsavarrow.rightarrow::before {
+  left: 27px;
+  border-color: red transparent transparent;
+}
+
+.jsavindex.jsavarrow.leftrightarrow::before {
+  border-color: #CC00FF transparent transparent;
+}
+
 table.headerTable {
   margin-top: -20px;
 }
