--- a/AV/Sorting/sortingAV.css
+++ b/AV/Sorting/sortingAV.css
@@ -1,4 +1,6 @@
 div h1 {
+  text-align: center;
+  border-bottom: 1px solid black;
   background-color: #efe;
   margin: 5px;
   margin-top: -10px;
@@ -37,7 +39,6 @@ form {
 }
 .jsavsettings {
   display: block;
-  margin-top: 10px;
   margin-left: 10px;
 }
 
@@ -73,6 +74,5 @@ form {
 }
 
 #about {
-  margin-top: 10px;
   float: right;
 }
