--- a/AV/Sorting/heapsortProficiency.css
+++ b/AV/Sorting/heapsortProficiency.css
@@ -1,19 +1,17 @@
 #HeapsortProficiency_container {
   width: 800px;
   height: 555px;
-  border: 1px solid black;
-  background-color: #efe;
-  padding: 10px;
-  overflow: hidden;
 }
-.jsavtree {top: -30px;}
-.jsavline { height: 45px; margin: 0 0 0 20px;}
-#decrement { margin-right: 20px;}
-.jsavcontainer {
-  background-color: #efe;
+
+.jsavtree {
+  top: -30px;
 }
-.jsavsettings {
-  display: block;
-  margin-top: 0;
-  margin-left: 10px;
+
+.jsavline {
+  height: 45px;
+  margin: 0 0 0 20px;
+}
+
+#decrement {
+  margin-right: 20px;
 }
