Implemented module proficiency display, changed the radix sort AVs so they would be logged correctly

--- a/RST/source/_static/opendsaMOD.css
+++ b/RST/source/_static/opendsaMOD.css
@@ -16,10 +16,17 @@
   right: 10px;
   display: none;
 }
+.mod_complete {
+  color: lime;
+  display: none;
+  position: absolute;
+  right: 20px;
+  top: 0;
+}
+
 label {  
   display: block;  
 }
-
 
 
 
