Fixed avembed to allow the RST Makefile to build the book, fixed a bug in configure.py where the copied Makefile couldn't locate the .htaccess file

--- a/RST/source/_static/opendsaMOD.css
+++ b/RST/source/_static/opendsaMOD.css
@@ -16,6 +16,20 @@
   right: 10px;
   display: none;
 }
+.prof_warning {
+    bottom: 30px;
+    display: none;
+    position: absolute;
+    right: 20px;
+    width: 20px;
+}
+.prof_warning_img {
+    bottom: 30px;
+    display: none;
+    position: absolute;
+    right: 20px;
+    width: 20px;
+}
 .mod_complete {
   color: lime;
   display: none;
