--- a/RST/source/_static/opendsaMOD.css
+++ b/RST/source/_static/opendsaMOD.css
@@ -16,6 +16,30 @@
   right: 10px;
   display: none;
 }
+.prof_saving_msg {
+  bottom: 25px;
+  color: red;
+  display: none;
+  font-size: x-small;
+  position: absolute;
+  right: 12px;
+}
+.prof_warning_img {
+  bottom: 40px;
+  display: none;
+  position: absolute;
+  right: 15px;
+  width: 20px;
+}
+.prof_error_msg {
+  bottom: 10px;
+  color: red;
+  display: none;
+  font-size: x-small;
+  position: absolute;
+  right: 10px;
+  text-align: center;
+}
 .mod_complete {
   color: lime;
   display: none;
