--- a/RST/source/_static/opendsaMOD.css
+++ b/RST/source/_static/opendsaMOD.css
@@ -16,7 +16,8 @@
   right: 10px;
   display: none;
 }
-.prof_saving_msg {
+/* Saving message for check mark proficiency indicator */
+.cm_saving_msg {
   bottom: 25px;
   color: red;
   display: none;
@@ -24,14 +25,14 @@
   position: absolute;
   right: 12px;
 }
-.prof_warning_img {
-  bottom: 40px;
-  display: none;
-  position: absolute;
-  right: 15px;
+/* Warning icon for check mark proficiency indicator */
+.cm_warning_icon {
+  position: relative;
+  right: -10px;
   width: 20px;
 }
-.prof_error_msg {
+/* Error message for check mark proficiency indicator */
+.cm_error_msg {
   bottom: 10px;
   color: red;
   display: none;
@@ -39,6 +40,20 @@
   position: absolute;
   right: 10px;
   text-align: center;
+}
+/* Message that appears next to a showHide button */
+.shb_msg {
+  color: red;
+  display: none;
+  font-size: small;
+  margin-left: 5px;
+  position: relative;
+}
+/* Warning icon that appears next to a showHide button */
+.shb_warning_icon {
+  position: relative;
+  top: 5px;
+  width: 20px;
 }
 .mod_complete {
   color: lime;
