Added a document describing the design and format of OpenDSA config files, fixed configure.py so that diagrams do not need to be specified in the config file

--- a/RST/source/_static/opendsaMOD.css
+++ b/RST/source/_static/opendsaMOD.css
@@ -4,6 +4,10 @@
 .admonition-todo {
   background-color: #FFC0CB;
 }
+.registration-popup {
+  height: 300px;
+  width: 250px;
+}
 .showHideLink {
   background-color: #FF0000;
 }
