Changed to gradebook page to provide an overview where user's can drill down to get more information, renamed Sorting module to SortIntro to make things more consistent and because it conflicts with the Sorting chapter name

--- a/RST/source/_static/opendsaMOD.css
+++ b/RST/source/_static/opendsaMOD.css
@@ -80,31 +80,6 @@ label {
   display: block;  
 }
 
-table.data td {
+.data td {
   padding: 0 5px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
