Set mathjax font size to be more compatible with Haiku font size; tinker with Birthday AV sizing; Privacy policy revision

--- a/AV/opendsaAV.css
+++ b/AV/opendsaAV.css
@@ -1,3 +1,8 @@
+body, input {
+  font-size: 14px;
+  font-family: Tahoma,Verdana,Arial,Helvetica,sans-serif;;
+}
+
 .proHeaderTable {
   margin-top: -20px;
   border-bottom: 0 none;
