--- a/lib/site.css
+++ b/lib/site.css
@@ -1,23 +1,35 @@
 #content {
-  min-width: 920px;
+  min-width: 980px;
   background-color: white;
   padding: 20px;  
   border-style: solid;  
   border-color: black;  
-  border-width: 0 1px 1px 1px;
+  border-width: 1px 1px 1px 1px;
+  margin-top: 20px;
   box-shadow: 2px 1px 5px #333, -2px 1px 5px #333;
 }
 
+#maintext {
+  position: relative;
+}
+
+#firsttitle {
+  position: absolute;
+  top: -85px;
+  color: red;
+}
+
 h1 {
-  text-align: left; font-family: Verdana, Arial, sans-serif;
-  vertical-align:
-  middle; font-size: 20pt; background-color: white;
+  text-align: center;
+  font-family: Verdana, Arial, sans-serif;
+  vertical-align: middle;
+  background-color: white;
   border-bottom: 1px solid black;
-  background: url(site/OpenDSALogo-Final64.png) no-repeat 20px 50%;
   background-color: white;
   color: #336299;
   margin: -8px -8px 0px -8px;
   padding: 8px 8px 2px 8px;
+  font-size: 36px;
 }
 
 h2, h3, h4, h5, h6 {
