--- a/AV/Sorting/ShellsortPerformance.css
+++ b/AV/Sorting/ShellsortPerformance.css
@@ -12,12 +12,13 @@
 #right {
   float: right;
   width: 35%;
-}
-
-#about {
-  margin-top: 0;
+  margin-top: -15px;
 }
 
 .jsavscroll {
   height: 240px;
+}
+
+#arraysize {
+  padding-left: 5px;
 }
