--- a/AV/opendsaAV.css
+++ b/AV/opendsaAV.css
@@ -65,9 +65,7 @@ form {
   width: 100px;
 }
 .jsavarray {
-  margin: 0;
-  margin-left: -10px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .jsavline {
   height: 30px;
@@ -82,7 +80,7 @@ form {
 }
 .jsavsettings {
   display: block;
-  margin-top: 10px;
+  margin-top: 0;
   margin-left: 10px;
 }
 
@@ -94,8 +92,8 @@ form {
 /* Style for the container holding proficiency exercise instructions */
 .instructions {
   margin-top: -15px;
+  margin-right: 20px;
   padding: 10px;
-  margin-right: 10px;
   border: 1px solid black;
 }
 
@@ -103,7 +101,7 @@ form {
 #container {
   border: 1px solid black;
   background-color: #efe;
-  padding: 10px;
+  padding: 5px;
   overflow: hidden;
 }
 
@@ -112,7 +110,18 @@ form {
   margin-top: -5px;
 }
 
-/* Right aligns the About button */
+/* Set placement for About button */
 #about {
+  margin-top: 0;
   float: right;
+}
+
+/* Set placement for Help button */
+#help {
+  margin-top: 0;
+  float: left;
+}
+
+#increments, #arrayValues {
+  padding-left: 5px;
 }
