--- a/AV/Hashing/HashFunc.css
+++ b/AV/Hashing/HashFunc.css
@@ -1,8 +1,5 @@
 #container {
-  border: 1px solid black;
-  background-color: #efe;
-  overflow: hidden;
-  width: 520px;
+  width: 530px;
   height: 165px;
 }
 
@@ -10,6 +7,7 @@
   text-align:center;
   margin: 0;
   margin-top: 0;
+  border: 0;
 }
 
 .output {
