--- a/AV/Hashing/hashAV.css
+++ b/AV/Hashing/hashAV.css
@@ -3,13 +3,14 @@ label {
 }
 
 #container {
-  width: 790px;
+  width: 800px;
   height: 575px;
 }
 
 #bottom {
+padding-left: 5px;
   height: 90px;
-  width: 810px;
+  width: 805px;
   border: 1px solid black;
   background-color: #ddd;
   overflow: hidden;
