--- a/AV/Hashing/hashAV.css
+++ b/AV/Hashing/hashAV.css
@@ -41,10 +41,12 @@ padding-left: 5px;
    text-align: center;
    position: absolute;
    left: 650px;
+   top: 0;
 }
 
 .jsavarray .jsavindex {
-  height: 30px;
+  min-height: 30px;
+  min-width: 30px;
 }
 
 .jsavnode {
