--- a/AV/Hashing/Birthday.css
+++ b/AV/Hashing/Birthday.css
@@ -5,9 +5,9 @@
 }
 
 .instructions {
-  border: 0px;
-  padding: 0px;
-  margin: 0px;
+  border: 0;
+  padding: 0;
+  margin: 0;
   text-align: center;
 }
 
