Moved registration page HTML to layout.html, moved the JS to opendsaMOD.js, improved the input validation, fixed some bugs and validation errors, tweaked the HTML and CSS for the login and registration boxes to look better, fixed the way the registration box is dynamically centered and added code to automatically log a new user in after successful registration

--- a/RST/source/_static/gradebook.css
+++ b/RST/source/_static/gradebook.css
@@ -4,6 +4,12 @@
   cursor: pointer;
 }
 
+/* Style for the "Error loading data" message */
+.error {
+  font-size: 20px;
+  text-align: center;
+}
+
 /* Style for the container which is expanded when the associated chapter, section or module row is clicked */
 .gb-section-container {
   border-bottom: solid 1px;
