--- a/lib/odsaAV.css
+++ b/lib/odsaAV.css
@@ -64,6 +64,12 @@ form {
 .jsavcontrols {
   margin-top: -10px;
 }
+.jsavmodelanswer .jsavline {
+  margin: 0 0 0 20px;
+}
+.jsavmodelanswer .jsavcontrols a {
+  margin: 20px 20px 0 0;
+}
 .jsavcounter {
   position: absolute;
   width: 100px;
