Update to JSAV 0.6.0-76, add dummy test config, fix minor listnode size issues in some AVs

--- a/AV/Hashing/openhashCON.css
+++ b/AV/Hashing/openhashCON.css
@@ -5,3 +5,9 @@
 svg {
   z-index: 50;
 }
+
+.jsavlist .jsavlistnode {
+  min-height: 30px !important;
+  max-height: 30px !important;
+  line-height: 30px;
+}
