--- a/AV/slideCON.css
+++ b/AV/slideCON.css
@@ -5,6 +5,8 @@
 }
 .jsavcontrols {
   margin-top: -35px;
+  margin-left: 35px; /* Center on screen, despite setting button */
+
 }
 .jsavoutput.jsavline{
   margin-top: -5px;
