--- a/AV/Development/listArrayCON.css
+++ b/AV/Development/listArrayCON.css
@@ -4,3 +4,21 @@
 #AlistCON2 {
   height: 280px;
 }
+#AlistCON3 {
+  height: 210px;
+}
+#AlistCON3 .jsavnode{
+  border: 0px;
+  background-color: #eed;
+  line-height: 60px;
+  font-size: 20px;
+  min-width: 65px;
+}
+.ssAV .jsavline{
+	height: 30px;
+	font-size: 1.1em;
+
+}
+.jsavcanvas{
+  height:50px;
+}
