--- a/AV/slideCON.css
+++ b/AV/slideCON.css
@@ -2,7 +2,7 @@
   background-color: #eed;
   margin: 0 auto;
   border: 0;
-  width: 850px;
+  width: 100%;
 }
 .jsavcontrols {
   margin-top: -35px;
