--- a/AV/Development/listADTCON.css
+++ b/AV/Development/listADTCON.css
@@ -8,6 +8,22 @@
   font-size: 20px;
   min-width: 65px;
 }
+#listADTCON2 { 
+  height: 200px;
+}
+#listADTCON2 .jsavnode{
+  border: 0px solid;
+  background-color: #eed;
+  line-height: 50px;
+  font-size: 20px;
+  min-width: 40px;
+}
+
+
+#listADTCON2 .ssAV .jsavline{
+	height: 30px;
+}
+
 .jsavcanvas{
   width: 850px;
 }
