--- a/AV/Development/listArrayCON.css
+++ b/AV/Development/listArrayCON.css
@@ -1,13 +1,34 @@
 #AlistCON1 {
-  height: 200px;
+  height: 420px;
+}
+
+#AlistCON1 .jsavcanvas{
+  margin-top: 20px;
+}
+
+#AlistCON1 .jsavnode{
+  border: 1px solid;
+  background-color: #eed;
+  line-height: 28px;
+  font-size: 12px;
+  min-width: 28px;
+  min-height: 28px;
+}
+#AlistCON1 .jsavcode{
+  margin-left: 0px;
+  margin-left: 250px;
+  width: 560px;
 }
 #AlistCON2 {
   height: 260px;
 }
+
+#AlistCON2 .jsavcanvas{
+  width: 850px;
+}
+
 .ssAV .jsavline{
 	height: 30px;
-	font-size: 1.1em;
-
 }
 .jsavcanvas{
   height:50px;
