--- a/AV/Development/listArrayCON.css
+++ b/AV/Development/listArrayCON.css
@@ -1,48 +1,48 @@
 #AlistCON1 {
-  height: 420px;
+  height: 330px;
 }
 
 #AlistCON1 .jsavcanvas{
   margin-top: 20px;
 }
 
+#AlistCON1 .jsavarray{
+  top: 4px;
+}
+
 #AlistCON1 .jsavnode{
-  border: 1px solid;
-  background-color: #eed;
-  line-height: 28px;
-  font-size: 12px;
-  min-width: 28px;
-  min-height: 28px;
+  line-height: 30px !important;
+  min-width: 30px !important;
+  max-width: 30px !important;
+  min-height: 30px !important;
+  max-height: 30px !important;
 }
 #AlistCON1 .jsavcode{
-  margin-left: 0px;
-  margin-left: 250px;
+  border: 1px solid;
+  border-color: white;
+  margin-left: 290px;
   width: 560px;
 }
 #AlistCON2 {
-  height: 400px;
-}
-
-#AlistCON2 .jsavcanvas{
-  width: 850px;
+  height: 375px;
 }
 
 #AlistCON2 .jsavnode{
-  border: 1px solid;
-  background-color: #eed;
-  line-height: 35px;
-  font-size: 12px;
-  min-width: 35px;
-  min-height: 35px;
+  line-height: 30px;
+  min-width: 30px !important;
+  max-width: 30px !important;
+  min-height: 30px !important;
+  max-height: 30px !important;
 }
 
 #AlistCON2 .jsavcode{
-  margin-left: 0px;
+  border: 1px solid;
+  border-color: white;
   margin-left: 290px;
   width: 560px;
 }
 .ssAV .jsavline{
-	height: 30px;
+  height: 45px;
 }
 .jsavcanvas{
   height:50px;
