--- a/AV/Development/listArrayTestCON.css
+++ b/AV/Development/listArrayTestCON.css
@@ -1,3 +1,55 @@
+#AlistCON1 {
+  height: 330px;
+}
+
+#AlistCON1 .jsavcanvas{
+  margin-top: 20px;
+}
+
+#AlistCON1 .jsavarray{
+  top: 4px;
+}
+
+#AlistCON1 .jsavnode{
+  line-height: 30px !important;
+  min-width: 30px !important;
+  max-width: 30px !important;
+  min-height: 30px !important;
+  max-height: 30px !important;
+}
+#AlistCON1 .jsavcode{
+  border: 1px solid;
+  border-color: white;
+  margin-left: 290px;
+  width: 560px;
+}
+#AlistCON2 {
+  height: 375px;
+}
+
+#AlistCON2 .jsavnode{
+  line-height: 30px;
+  min-width: 30px !important;
+  max-width: 30px !important;
+  min-height: 30px !important;
+  max-height: 30px !important;
+}
+
+#AlistCON2 .jsavcode{
+  border: 1px solid;
+  border-color: white;
+  margin-left: 290px;
+  width: 560px;
+}
+
+.ssAV .jsavline{
+  height: 45px;
+}
+
+.jsavcanvas{
+  height:50px;
+}
+
 #AlistTestCON1 {
   height: 310px;
 }
